force-app/main/default/objects/Candidate_Search__c/Candidate_Search__c.object-meta.xml
<CustomObject>
    <label>Candidate Search</label>
    <nameField>
        <label>Candidate Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>