force-app/main/default/objects/Candidate_Search__c/fields/Advanced_Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Filter_Conditions__c</fullName>
    <label>Advanced Filter Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>