force-app/main/default/objects/Candidate_Search__c/fields/Competency_Advanced_Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Competency_Advanced_Filter_Conditions__c</fullName>
    <label>Competency Advanced Filter Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>