force-app/main/default/objects/Candidate_Search__c/fields/Competency_e3__c.field-meta.xml
<CustomField>
    <fullName>Competency_e3__c</fullName>
    <label>Competency e3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>