force-app/main/default/objects/Candidate_Search__c/fields/Competency_p10__c.field-meta.xml
<CustomField>
    <fullName>Competency_p10__c</fullName>
    <label>Competency p10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>