force-app/main/default/objects/Candidate_Search__c/fields/Competency_p1__c.field-meta.xml
<CustomField>
    <fullName>Competency_p1__c</fullName>
    <label>Competency p1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>