force-app/main/default/objects/Candidate_Search__c/fields/Competency_v2__c.field-meta.xml
<CustomField>
    <fullName>Competency_v2__c</fullName>
    <label>Competency v2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>