force-app/main/default/objects/Candidate_Search__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>