force-app/main/default/objects/Candidate_Search__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>