force-app/main/default/objects/Candidate_Search__c/fields/Display_Columns__c.field-meta.xml
<CustomField>
    <fullName>Display_Columns__c</fullName>
    <label>Display Columns</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>