force-app/main/default/objects/Candidate_Search__c/fields/e10__c.field-meta.xml
<CustomField>
    <fullName>e10__c</fullName>
    <label>e10</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>