force-app/main/default/objects/Candidate_Search__c/fields/e2__c.field-meta.xml
<CustomField>
    <fullName>e2__c</fullName>
    <label>e2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>