force-app/main/default/objects/Candidate_Search__c/fields/Education_e2__c.field-meta.xml
<CustomField>
    <fullName>Education_e2__c</fullName>
    <label>Education e2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>