force-app/main/default/objects/Candidate_Search__c/fields/Education_e3__c.field-meta.xml
<CustomField>
    <fullName>Education_e3__c</fullName>
    <label>Education e3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>