force-app/main/default/objects/Candidate_Search__c/fields/Education_p2__c.field-meta.xml
<CustomField>
    <fullName>Education_p2__c</fullName>
    <label>Education p2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>