force-app/main/default/objects/Candidate_Search__c/fields/Education_v2__c.field-meta.xml
<CustomField>
    <fullName>Education_v2__c</fullName>
    <label>Education v2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>