force-app/main/default/objects/Candidate_Search__c/fields/Education_v3__c.field-meta.xml
<CustomField>
    <fullName>Education_v3__c</fullName>
    <label>Education v3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>