force-app/main/default/objects/Candidate_Search__c/fields/Employment_Advanced_Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Employment_Advanced_Filter_Conditions__c</fullName>
    <label>Employment Advanced Filter Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>