force-app/main/default/objects/Candidate_Search__c/fields/Employment_e1__c.field-meta.xml
<CustomField>
    <fullName>Employment_e1__c</fullName>
    <label>Employment e1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>