force-app/main/default/objects/Candidate_Search__c/fields/Employment_e2__c.field-meta.xml
<CustomField>
    <fullName>Employment_e2__c</fullName>
    <label>Employment e2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>