force-app/main/default/objects/Candidate_Search__c/fields/Employment_p1__c.field-meta.xml
<CustomField>
    <fullName>Employment_p1__c</fullName>
    <label>Employment p1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>