force-app/main/default/objects/Candidate_Search__c/fields/Employment_p3__c.field-meta.xml
<CustomField>
    <fullName>Employment_p3__c</fullName>
    <label>Employment p3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>