force-app/main/default/objects/Candidate_Search__c/fields/Filter_Order__c.field-meta.xml
<CustomField>
    <fullName>Filter_Order__c</fullName>
    <label>Filter Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>