force-app/main/default/objects/Candidate_Search__c/fields/Hotbook_Id__c.field-meta.xml
<CustomField>
    <fullName>Hotbook_Id__c</fullName>
    <label>Hotbook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>