force-app/main/default/objects/Candidate_Search__c/fields/JSON_Criteria__c.field-meta.xml
<CustomField>
    <fullName>JSON_Criteria__c</fullName>
    <label>JSON Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>