force-app/main/default/objects/Candidate_Search__c/fields/p1__c.field-meta.xml
<CustomField>
    <fullName>p1__c</fullName>
    <label>p1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>