force-app/main/default/objects/Candidate_Search__c/fields/Search_Query__c.field-meta.xml
<CustomField>
    <fullName>Search_Query__c</fullName>
    <label>Search Query</label>
    <length>80</length>
    <type>Text</type>
</CustomField>