force-app/main/default/objects/Candidate_Search__c/fields/v1__c.field-meta.xml
<CustomField>
    <fullName>v1__c</fullName>
    <label>v1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>