force-app/main/default/objects/Candidate_Search__c/fields/v2__c.field-meta.xml
<CustomField>
    <fullName>v2__c</fullName>
    <label>v2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>