force-app/main/default/objects/Candidate_Search__c/fields/v3__c.field-meta.xml
<CustomField>
    <fullName>v3__c</fullName>
    <label>v3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>